--- a/FarmScout/App.xaml
+++ b/FarmScout/App.xaml
@@ -16,6 +16,7 @@
             <converters:BoolToColorConverter x:Key="BoolToColorConverter"/>
             <converters:BoolToStringConverter x:Key="BoolToStringConverter"/>
             <converters:GroupIconConverter x:Key="GroupIconConverter"/>
+            <converters:StringToBoolConverter x:Key="StringToBoolConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
