--- a/FarmScout/Controls/DiseaseControl.xaml
+++ b/FarmScout/Controls/DiseaseControl.xaml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewmodels="clr-namespace:FarmScout.ViewModels" 
              x:Class="FarmScout.Controls.DiseaseControl">
     
     <Border BackgroundColor="#F5F5F5" Padding="15">
@@ -15,26 +14,33 @@
                    TextColor="#2E7D32"/>
 
             <Entry Placeholder="Disease Name" 
-                   Text="{Binding DiseaseName}"
+                   Text="{Binding Source={RelativeSource AncestorType={x:Type ContentView}}, Path=DiseaseName}"
                    TextColor="Black"
                    BackgroundColor="White"
                    PlaceholderColor="#999"
-                   IsReadOnly="{Binding x:DataType=viewmodels:ObservationViewModel, Path=IsViewMode}"/>
+                   IsReadOnly="True"/>
 
             <Entry Placeholder="Disease Type" 
-                   Text="{Binding DiseaseType}"
+                   Text="{Binding Source={RelativeSource AncestorType={x:Type ContentView}}, Path=DiseaseType}"
                    TextColor="Black"
                    BackgroundColor="White"
                    PlaceholderColor="#999"
-                   Keyboard="Numeric"
-                   IsReadOnly="{Binding IsViewMode}"/>
+                   IsReadOnly="True"/>
 
-            <Button Text="Show Disease Info" 
-                    BackgroundColor="#2E7D32"
+            <Entry Placeholder="Description" 
+                   Text="{Binding Source={RelativeSource AncestorType={x:Type ContentView}}, Path=DiseaseDescription}"
+                   TextColor="Black"
+                   BackgroundColor="White"
+                   PlaceholderColor="#999"
+                   IsReadOnly="True"
+                   HeightRequest="60"/>
+
+            <Button Text="{Binding Source={RelativeSource AncestorType={x:Type ContentView}}, Path=DiseaseName, StringFormat='Select Disease: {0}', FallbackValue='Select Disease'}" 
+                    BackgroundColor="{Binding Source={RelativeSource AncestorType={x:Type ContentView}}, Path=DiseaseName, Converter={StaticResource StringToBoolConverter}, ConverterParameter='#4CAF50|#2E7D32'}"
                     TextColor="White"
                     CornerRadius="8"
                     Padding="15,10"
-                    Clicked="OnDiseaseInfoButtonClicked"/>
+                    Clicked="OnSelectDiseaseClicked"/>
         </VerticalStackLayout>
     </Border>
     
