--- a/FarmScout/Views/ObservationPage.xaml
+++ b/FarmScout/Views/ObservationPage.xaml
@@ -8,8 +8,11 @@
              x:DataType="viewmodels:ObservationViewModel"
              x:Name="ObservationPageRoot"
              xmlns:viewmodels="clr-namespace:FarmScout.ViewModels" 
-             Title="{Binding Title}"
-             >
+             Title="{Binding Title}">
+    
+    <ContentPage.Resources>
+        <converters:MetadataConverter x:Key="MetadataConverter"/>
+    </ContentPage.Resources>
 
     <Grid RowDefinitions="Auto,*">
         <!-- Header -->
@@ -175,7 +178,8 @@
                                 <controls:ObservationTypeControl 
                                     ObservationTypeId="{Binding Id}"
                                     ValuesChangedCommand="{Binding x:DataType=viewmodels:ObservationViewModel, Source={RelativeSource AncestorType={x:Type viewmodels:ObservationViewModel}}, Path=UpdateMetadataForTypeCommand}"
-                                    IsVisible="{Binding x:DataType=viewmodels:ObservationViewModel, Source={RelativeSource AncestorType={x:Type viewmodels:ObservationViewModel}}, Path=IsEditable}"/>
+                                    IsEditable="{Binding x:DataType=viewmodels:ObservationViewModel, Source={RelativeSource AncestorType={x:Type viewmodels:ObservationViewModel}}, Path=IsEditable}"
+                                    InitialValues="{Binding x:DataType=viewmodels:ObservationViewModel, Source={RelativeSource AncestorType={x:Type viewmodels:ObservationViewModel}}, Path=MetadataByType, Converter={StaticResource MetadataConverter}, ConverterParameter={Binding Id}}"/>
                             </VerticalStackLayout>
                         </Border>
                     </DataTemplate>
